tests/rosetta/transpiler/Zig/abbreviations-simple.error
zig build: exit status 1
/tmp/abbreviations-simple.zig:116:8: error: expected 'while', 'for', 'inline', or '{', found 'an identifier'
